# evolutionary-teal-organization

./: .gitignore  CLAUDE.md  Makefile  README.md  config.yaml.example  pyproject.toml  requirements.txt  run-eto.cmd  run-eto.ps1  verify-eto.cmd
docs/: feature-sourcing.md  framework.md  handover-2026-06-26-a.md
docs/handoffs/reasonix/: INDEX.md  completion-eto-auto-register-and-cleanup.md  completion-eto-bootable-v2.md  completion-eto-bootable.md  completion-eto-debug-widget-tui.md  completion-eto-diagnose-widget.md  completion-eto-fix-ext-path.md  completion-eto-replace-wrapper.md  completion-eto-response-summary.md  completion-eto-tui-proxy.md  completion-eto-widget-and-next.md  completion-eto-widget-status.md  completion-install-fd-rg.md  completion-routing-in-response.md  completion-stitcher-hardening.md  completion-streaming-output.md  plan-eto-auto-register-and-cleanup.md  plan-eto-bootable-v2.md  plan-eto-bootable.md  plan-eto-debug-widget-tui.md  plan-eto-diagnose-widget.md  plan-eto-fix-ext-path.md  plan-eto-point-to-patched.md  plan-eto-replace-wrapper.md  plan-eto-response-summary.md  plan-eto-tui-entry.md  plan-eto-tui-proxy.md  plan-eto-widget-and-next.md  plan-eto-widget-status.md  plan-fork-phase1.md  plan-install-fd-rg.md  plan-powershell-entry.md  plan-routing-in-response.md  plan-stitcher-hardening.md  plan-streaming-output.md
eto/: pyproject.toml
eto/extensions/: eto.ts
eto/stitches/: README.md  __init__.py  test.py
eto/stitches/comms/: a2a.py
eto/stitches/consensus/: vote.py
scripts/: setup.sh
src/: __init__.py
(+1 files in other folders)
