[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "evolutionary-teal-organization"
version = "0.3.1"
description = "ETO — 青色组织多 Agent 编排架构 / Multi-agent Teal Organization orchestration"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "protolink>=0.3",
    "rich>=13.0",
    "textual>=0.41",
    "prompt-toolkit>=3.0",
    "pyyaml>=6.0",
]

[project.scripts]
eto = "src.tui:main"

[tool.setuptools.packages.find]
include = ["src*"]
